--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/material": "^5.11.14",
     "axios": "^1.3.4",
     "file-saver": "^2.0.5",
